Refactor optimizer and samplers

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ before_script:
   stage: test
   script:
     - echo "Start building..."
+    - pip install "git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI"
     - pip install git+https://github.com/open-mmlab/mmdetection.git@v2.0
     - python -c "import mmdet; print(mmdet.__version__)"
     - pip install -v -e .[all]
