--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,5 +24,6 @@ repos:
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
       - id: double-quote-string-fixer
+      - id: check-merge-conflict
       - id: fix-encoding-pragma
         args: ["--remove"]
