--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,55 @@
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
 name: build
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install linting dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 isort yapf interrogate
+      - name: Lint with flake8
+        run: flake8 .
+      - name: Lint with isort
+        run: isort --recursive --check-only --diff mmdet3d/ tests/ examples/
+      - name: Format python codes with yapf
+        run: yapf -r -d mmdet3d/ tests/ examples/
+      - name: Check docstring
+        run: interrogate -v --ignore-init-method --ignore-module --ignore-nested-functions --exclude mmdet3d/ops --ignore-regex "__repr__" --fail-under 80 mmdet3d
 
+  build:
     env:
       CUDA: 10.1.105-1
       CUDA_SHORT: 10.1
       UBUNTU_VERSION: ubuntu1804
       FORCE_CUDA: 1
+      MMCV_CUDA_ARGS: -gencode=arch=compute_61,code=sm_61
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        torch: [1.3.0, 1.5.0]
+        torch: [1.3.0+cpu, 1.5.0+cpu]
         include:
-          - torch: 1.3.0
-            torchvision: 0.4.2
-            cuda_arch: "6.0"
-          - torch: 1.5.0
-            torchvision: 0.6.0
-            cuda_arch: "7.0"
+          - torch: 1.3.0+cpu
+            torchvision: 0.4.2+cpu
+          - torch: 1.5.0+cpu
+            torchvision: 0.6.0+cpu
+          - torch: 1.5.0+cpu
+            torchvision: 0.6.0+cpu
+            python-version: 3.8
+          - torch: 1.5.0+cu101
+            torchvision: 0.6.0+cu101
+            python-version: 3.7
 
     steps:
       - uses: actions/checkout@v2
@@ -30,6 +58,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install CUDA
+        if: ${{matrix.torch == '1.5.0+cu101'}}
         run: |
           export INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
           wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
@@ -44,37 +73,24 @@ jobs:
           export PATH=${CUDA_HOME}/bin:${PATH}
           sudo apt-get install -y ninja-build
       - name: Install Pillow
+        if: ${{matrix.torchvision == '0.4.2+cpu'}}
         run: pip install Pillow==6.2.2
-        if: ${{matrix.torchvision < 0.5}}
       - name: Install PyTorch
-        run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}}
+        run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv-full==1.0.0+torch${{matrix.torch}}+cu101 -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
+          pip install mmcv==1.0rc0+torch${{matrix.torch}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
           pip install -r requirements.txt
-          pip install "git+https://github.com/open-mmlab/cocoapi.git#subdirectory=pycocotools"
-          pip install -q "git+https://github.com/open-mmlab/mmdetection.git"
-      - name: Lint with flake8
-        run: flake8 .
-      - name: Lint with isort
-        run: isort --recursive --check-only --diff mmdet3d/ tools/ tests/
-      - name: Format with yapf
-        run: yapf -r -d mmdet3d/ tools/ configs/ tests/
-      - name: Check docstring
-        run: interrogate -v --ignore-init-method --ignore-module --ignore-nested-functions --ignore-regex "__repr__" --fail-under 80 mmdet3d
       - name: Build and install
-        env:
-          CUDA_ARCH: ${{matrix.cuda_arch}}
-        run: |
-          rm -rf .eggs
-          python setup.py check -m -s
-          TORCH_CUDA_ARCH_LIST=${CUDA_ARCH} python setup.py build_ext --inplace
+        run: rm -rf .eggs && pip install -e .
       - name: Run unittests and generate coverage report
         run: |
           coverage run --branch --source mmdet3d -m pytest tests/
           coverage xml
-          coverage report -m
+          coverage report -m --omit="mmdet3d/utils/*","mmdet3d/apis/*"
+      # Only upload coverage report for python3.7 && pytorch1.5
       - name: Upload coverage to Codecov
+        if: ${{matrix.torch == '1.5.0+cu101' && matrix.python-version == '3.7'}}
         uses: codecov/codecov-action@v1.0.10
         with:
           file: ./coverage.xml
