--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,23 +33,18 @@ jobs:
       CUDA_SHORT: 10.1
       UBUNTU_VERSION: ubuntu1804
       FORCE_CUDA: 1
-      MMCV_CUDA_ARGS: -gencode=arch=compute_61,code=sm_61
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        torch: [1.3.0+cpu, 1.5.0+cpu]
+        torch: [1.3.0, 1.5.0]
         include:
-          - torch: 1.3.0+cpu
-            torchvision: 0.4.2+cpu
-          - torch: 1.5.0+cpu
-            torchvision: 0.6.0+cpu
-          - torch: 1.5.0+cpu
-            torchvision: 0.6.0+cpu
-            python-version: 3.8
-          - torch: 1.5.0+cu101
-            torchvision: 0.6.0+cu101
-            python-version: 3.7
+          - torch: 1.3.0
+            torchvision: 0.4.2
+            cuda_arch: "6.0"
+          - torch: 1.5.0
+            torchvision: 0.6.0
+            cuda_arch: "7.0"
 
     steps:
       - uses: actions/checkout@v2
@@ -58,7 +53,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install CUDA
-        if: ${{matrix.torch == '1.5.0+cu101'}}
         run: |
           export INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
           wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
@@ -73,8 +67,8 @@ jobs:
           export PATH=${CUDA_HOME}/bin:${PATH}
           sudo apt-get install -y ninja-build
       - name: Install Pillow
-        if: ${{matrix.torchvision == '0.4.2+cpu'}}
         run: pip install Pillow==6.2.2
+        if: ${{matrix.torchvision < 0.5}}
       - name: Install PyTorch
         run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
