--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       CUDA_SHORT: 10.1
       UBUNTU_VERSION: ubuntu1804
       FORCE_CUDA: 1
+      CUDA_ARCH: ${{matrix.cuda_arch}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
