--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Format python codes with yapf
         run: yapf -r -d mmdet3d/ tests/ examples/
       - name: Check docstring
-        run: interrogate -v --ignore-init-method --ignore-module --ignore-nested-functions --exclude mmdet3d/ops --ignore-regex "__repr__" --fail-under 80 mmdet3d
+        run: interrogate -v --ignore-init-method --ignore-module --ignore-nested-functions --exclude mmdet3d/ops --ignore-regex "__repr__" --fail-under 95 mmdet3d
 
   build:
     env:
@@ -33,23 +33,19 @@ jobs:
       CUDA_SHORT: 10.1
       UBUNTU_VERSION: ubuntu1804
       FORCE_CUDA: 1
-      MMCV_CUDA_ARGS: -gencode=arch=compute_61,code=sm_61
+      CUDA_ARCH: ${{matrix.cuda_arch}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        torch: [1.3.0+cpu, 1.5.0+cpu]
+        torch: [1.3.0, 1.5.0]
         include:
-          - torch: 1.3.0+cpu
-            torchvision: 0.4.2+cpu
-          - torch: 1.5.0+cpu
-            torchvision: 0.6.0+cpu
-          - torch: 1.5.0+cpu
-            torchvision: 0.6.0+cpu
-            python-version: 3.8
-          - torch: 1.5.0+cu101
-            torchvision: 0.6.0+cu101
-            python-version: 3.7
+          - torch: 1.3.0
+            torchvision: 0.4.2
+            cuda_arch: "6.0"
+          - torch: 1.5.0
+            torchvision: 0.6.0
+            cuda_arch: "7.0"
 
     steps:
       - uses: actions/checkout@v2
@@ -58,7 +54,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install CUDA
-        if: ${{matrix.torch == '1.5.0+cu101'}}
         run: |
           export INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
           wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
@@ -73,16 +68,21 @@ jobs:
           export PATH=${CUDA_HOME}/bin:${PATH}
           sudo apt-get install -y ninja-build
       - name: Install Pillow
-        if: ${{matrix.torchvision == '0.4.2+cpu'}}
         run: pip install Pillow==6.2.2
+        if: ${{matrix.torchvision < 0.5}}
       - name: Install PyTorch
         run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv==1.0rc0+torch${{matrix.torch}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
+          pip install -q "git+https://github.com/open-mmlab/cocoapi.git#subdirectory=pycocotools"
+          pip install mmcv-full==latest+torch${{matrix.torch}}+cu101 -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
+          pip install -q git+https://github.com/open-mmlab/mmdetection.git
           pip install -r requirements.txt
       - name: Build and install
-        run: rm -rf .eggs && pip install -e .
+        run: |
+          rm -rf .eggs
+          python setup.py check -m -s
+          TORCH_CUDA_ARCH_LIST=${CUDA_ARCH} python setup.py build_ext --inplace
       - name: Run unittests and generate coverage report
         run: |
           coverage run --branch --source mmdet3d -m pytest tests/
