update build configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+[yapf]
+BASED_ON_STYLE = pep8
+BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
+SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = true
+
 [isort]
 line_length = 79
 multi_line_output = 0
