--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,10 +87,10 @@ jobs:
         run: |
           coverage run --branch --source mmdet3d -m pytest tests/
           coverage xml
-          coverage report -m --omit="mmdet3d/utils/*","mmdet3d/apis/*"
+          coverage report -m
       # Only upload coverage report for python3.7 && pytorch1.5
       - name: Upload coverage to Codecov
-        if: ${{matrix.torch == '1.5.0+cu101' && matrix.python-version == '3.7'}}
+        if: ${{matrix.torch == '1.5.0' && matrix.python-version == '3.7'}}
         uses: codecov/codecov-action@v1.0.10
         with:
           file: ./coverage.xml
