--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           python-version: 3.7
       - name: Build MMDet3D
-        run: python setup.py sdist
+        run: |
+          pip install wheel
+          python setup.py sdist bdist_wheel
       - name: Publish distribution to PyPI
         run: |
           pip install twine
