Skip whl when publish to pypi

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,7 @@ jobs:
         with:
           python-version: 3.7
       - name: Build MMDet3D
-        run: |
-          pip install wheel
-          python setup.py sdist bdist_wheel
+        run: python setup.py sdist
       - name: Publish distribution to PyPI
         run: |
           pip install twine
