--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,15 +37,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7]
-        torch: [1.3.0, 1.5.0]
+        python-version: [3.7]
+        torch: [1.3.1, 1.5.1+cu101, 1.6.0+cu101]
         include:
-          - torch: 1.3.0
+          - torch: 1.3.1
             torchvision: 0.4.2
-            cuda_arch: "6.0"
-          - torch: 1.5.0
-            torchvision: 0.6.0
-            cuda_arch: "7.0"
+            mmcv: "latest+torch1.3.0+cu101"
+          - torch: 1.5.1+cu101
+            torchvision: 0.6.1+cu101
+            mmcv: "latest+torch1.5.0+cu101"
+          - torch: 1.6.0+cu101
+            torchvision: 0.7.0+cu101
+            mmcv: "latest+torch1.6.0+cu101"
+          - torch: 1.6.0+cu101
+            torchvision: 0.7.0+cu101
+            mmcv: "latest+torch1.6.0+cu101"
+            python-version: 3.6
+          - torch: 1.6.0+cu101
+            torchvision: 0.7.0+cu101
+            mmcv: "latest+torch1.6.0+cu101"
+            python-version: 3.8
 
     steps:
       - uses: actions/checkout@v2
@@ -74,7 +85,7 @@ jobs:
         run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv-full==latest+torch${{matrix.torch}}+cu101 -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
+          pip install mmcv-full==${{matrix.mmcv}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
           pip install -q git+https://github.com/open-mmlab/mmdetection.git
           pip install -r requirements.txt
       - name: Build and install
@@ -89,7 +100,6 @@ jobs:
           coverage report -m
       # Only upload coverage report for python3.7 && pytorch1.5
       - name: Upload coverage to Codecov
-        if: ${{matrix.torch == '1.5.0' && matrix.python-version == '3.7'}}
         uses: codecov/codecov-action@v1.0.10
         with:
           file: ./coverage.xml
