--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,6 @@ jobs:
       CUDA: 10.1.105-1
       CUDA_SHORT: 10.1
       UBUNTU_VERSION: ubuntu1804
-      FORCE_CUDA: 1
-      CUDA_ARCH: ${{matrix.cuda_arch}}
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.7]
@@ -77,7 +74,6 @@ jobs:
           export CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
           export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${CUDA_HOME}/include:${LD_LIBRARY_PATH}
           export PATH=${CUDA_HOME}/bin:${PATH}
-          sudo apt-get install -y ninja-build
       - name: Install Pillow
         run: pip install Pillow==6.2.2
         if: ${{matrix.torchvision < 0.5}}
@@ -92,7 +88,7 @@ jobs:
         run: |
           rm -rf .eggs
           python setup.py check -m -s
-          TORCH_CUDA_ARCH_LIST=${CUDA_ARCH} python setup.py build_ext --inplace
+          TORCH_CUDA_ARCH_LIST=7.0 pip install .
       - name: Run unittests and generate coverage report
         run: |
           coverage run --branch --source mmdet3d -m pytest tests/
