--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         run: interrogate -v --ignore-init-method --ignore-module --ignore-nested-functions --exclude mmdet3d/ops --ignore-regex "__repr__" --fail-under 95 mmdet3d
 
   build:
+    runs-on: ubuntu-latest
     env:
       CUDA: 10.1.105-1
       CUDA_SHORT: 10.1
