--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
     env:
       CUDA: 10.1.105-1
       CUDA_SHORT: 10.1
+      FORCE_CUDA: 1
       UBUNTU_VERSION: ubuntu1804
     strategy:
       matrix:
