--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,20 +41,20 @@ jobs:
         include:
           - torch: 1.3.1
             torchvision: 0.4.2
-            mmcv: "latest+torch1.3.0+cu101"
+            mmcv: "1.0.5+torch1.3.0+cu101"
           - torch: 1.5.1+cu101
             torchvision: 0.6.1+cu101
-            mmcv: "latest+torch1.5.0+cu101"
+            mmcv: "1.0.5+torch1.5.0+cu101"
           - torch: 1.6.0+cu101
             torchvision: 0.7.0+cu101
-            mmcv: "latest+torch1.6.0+cu101"
+            mmcv: "1.0.5+torch1.6.0+cu101"
           - torch: 1.6.0+cu101
             torchvision: 0.7.0+cu101
-            mmcv: "latest+torch1.6.0+cu101"
+            mmcv: "1.0.5+torch1.6.0+cu101"
             python-version: 3.6
           - torch: 1.6.0+cu101
             torchvision: 0.7.0+cu101
-            mmcv: "latest+torch1.6.0+cu101"
+            mmcv: "1.0.5+torch1.6.0+cu101"
             python-version: 3.8
 
     steps:
