--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,12 +28,13 @@ jobs:
         run: interrogate -v --ignore-init-method --ignore-module --ignore-nested-functions --exclude mmdet3d/ops --ignore-regex "__repr__" --fail-under 95 mmdet3d
 
   build:
-    runs-on: ubuntu-latest
     env:
       CUDA: 10.1.105-1
       CUDA_SHORT: 10.1
-      FORCE_CUDA: 1
       UBUNTU_VERSION: ubuntu1804
+      FORCE_CUDA: 1
+      CUDA_ARCH: ${{matrix.cuda_arch}}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.7]
@@ -42,12 +43,15 @@ jobs:
           - torch: 1.3.1
             torchvision: 0.4.2
             mmcv: "1.0.5+torch1.3.0+cu101"
+            cuda_arch: "6.0"
           - torch: 1.5.1+cu101
             torchvision: 0.6.1+cu101
             mmcv: "1.0.5+torch1.5.0+cu101"
+            cuda_arch: "7.0"
           - torch: 1.6.0+cu101
             torchvision: 0.7.0+cu101
             mmcv: "1.0.5+torch1.6.0+cu101"
+            cuda_arch: "7.0"
           - torch: 1.6.0+cu101
             torchvision: 0.7.0+cu101
             mmcv: "1.0.5+torch1.6.0+cu101"
@@ -76,6 +80,7 @@ jobs:
           export CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
           export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${CUDA_HOME}/include:${LD_LIBRARY_PATH}
           export PATH=${CUDA_HOME}/bin:${PATH}
+          sudo apt-get install -y ninja-build
       - name: Install Pillow
         run: pip install Pillow==6.2.2
         if: ${{matrix.torchvision < 0.5}}
@@ -90,7 +95,7 @@ jobs:
         run: |
           rm -rf .eggs
           python setup.py check -m -s
-          TORCH_CUDA_ARCH_LIST=7.0 pip install .
+          TORCH_CUDA_ARCH_LIST=${CUDA_ARCH} python setup.py build_ext --inplace
       - name: Run unittests and generate coverage report
         run: |
           coverage run --branch --source mmdet3d -m pytest tests/
