--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,15 +38,15 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        torch: [1.3.0, 1.5.0, 1.6.0]
+        torch: [1.3.0, 1.5.0+cu101, 1.6.0+cu101]
         include:
           - torch: 1.3.0
             torchvision: 0.4.2
             cuda_arch: "6.0"
-          - torch: 1.5.0
+          - torch: 1.5.0+cu101
             torchvision: 0.6.0
             cuda_arch: "7.0"
-          - torch: 1.6.0
+          - torch: 1.6.0+cu101
             torchvision: 0.7.0
             cuda_arch: "7.0"
 
