--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,14 @@ jobs:
         include:
           - torch: 1.3.1
             torchvision: 0.4.2
-            cuda_arch: "6.0"
+            torchlink: 1.3.1
+            cuda_arch: "7.0"
           - torch: 1.5.0+cu101
+            torchlink: 1.5.0%2Bcu101
             torchvision: 0.6.0
             cuda_arch: "7.0"
           - torch: 1.6.0+cu101
+            torchlink: 1.6.0%2Bcu101
             torchvision: 0.7.0
             cuda_arch: "7.0"
 
@@ -74,7 +77,9 @@ jobs:
         run: pip install Pillow==6.2.2
         if: ${{matrix.torchvision < 0.5}}
       - name: Install PyTorch
-        run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
+        run: pip install https://download.pytorch.org/whl/cu101/${{matrix.torchlink}}-cp37-cp37m-linux_x86_64.whl
+      - name: Install TorchVision
+        run: pip install torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
           pip install mmcv-full==latest+torch${{matrix.torch}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
