--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,14 +41,17 @@ jobs:
         torch: [1.3.0, 1.5.0+cu101, 1.6.0+cu101]
         include:
           - torch: 1.3.0
+            mmcv_version: 1.3.0+cu101
             torchvision: 0.4.2
             torchlink: 1.3.0
             cuda_arch: "7.0"
           - torch: 1.5.0+cu101
+            mmcv_version: 1.5.0+cu101
             torchlink: 1.5.0%2Bcu101
             torchvision: 0.6.0
             cuda_arch: "7.0"
           - torch: 1.6.0+cu101
+            mmcv_version: 1.6.0+cu101
             torchlink: 1.6.0%2Bcu101
             torchvision: 0.7.0
             cuda_arch: "7.0"
@@ -82,7 +85,7 @@ jobs:
         run: pip install torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv-full==latest+torch${{matrix.torch}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
+          pip install mmcv-full==latest+torch${{matrix.mmcv_version}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
           pip install -q git+https://github.com/open-mmlab/mmdetection.git
           pip install -r requirements.txt
       - name: Build and install
