--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,21 +38,12 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7]
-        torch: [1.3.0, 1.5.0+cu101, 1.6.0+cu101]
+        torch: [1.5.0+cu101, 1.6.0+cu101]
         include:
-          - torch: 1.3.0
-            mmcv_version: 1.3.0+cu101
-            torchvision: 0.4.2
-            torchlink: 1.3.0
-            cuda_arch: "7.0"
           - torch: 1.5.0+cu101
-            mmcv_version: 1.5.0+cu101
-            torchlink: 1.5.0%2Bcu101
             torchvision: 0.6.0
             cuda_arch: "7.0"
           - torch: 1.6.0+cu101
-            mmcv_version: 1.6.0+cu101
-            torchlink: 1.6.0%2Bcu101
             torchvision: 0.7.0
             cuda_arch: "7.0"
 
@@ -80,12 +71,10 @@ jobs:
         run: pip install Pillow==6.2.2
         if: ${{matrix.torchvision < 0.5}}
       - name: Install PyTorch
-        run: pip install https://download.pytorch.org/whl/cu101/torch-${{matrix.torchlink}}-cp37-cp37m-linux_x86_64.whl
-      - name: Install TorchVision
-        run: pip install torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
+        run: pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv-full==latest+torch${{matrix.mmcv_version}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
+          pip install mmcv-full==latest+torch${{matrix.torch}} -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
           pip install -q git+https://github.com/open-mmlab/mmdetection.git
           pip install -r requirements.txt
       - name: Build and install
