--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,13 +38,16 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7]
-        torch: [1.5.0+cu101, 1.6.0+cu101]
+        torch: [1.3.1, 1.5.0+cu101, 1.6.0+cu101]
         include:
-          - torch: 1.5.0+cu101
+          - torch: 1.3.1
             torchvision: 0.6.0
+            cuda_arch: "6.0"
+          - torch: 1.5.0+cu101
+            torchvision: 0.6.0+cu101
             cuda_arch: "7.0"
           - torch: 1.6.0+cu101
-            torchvision: 0.7.0
+            torchvision: 0.7.0+cu101
             cuda_arch: "7.0"
 
     steps:
@@ -63,6 +66,8 @@ jobs:
           sudo apt update -qq
           sudo apt install -y cuda-${CUDA_SHORT/./-} cuda-cufft-dev-${CUDA_SHORT/./-}
           sudo apt clean
+          sudo cp /usr/local/cuda-10.2/include/* /usr/local/cuda/include
+          sudo cp -r /usr/local/cuda-10.2/lib64/* /usr/local/cuda/lib64/
           export CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
           export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${CUDA_HOME}/include:${LD_LIBRARY_PATH}
           export PATH=${CUDA_HOME}/bin:${PATH}
