--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ exps/
 # demo
 *.jpg
 *.png
+/data/s3dis/Stanford3dDataset_v1.2_Aligned_Version/
 /data/scannet/scans/
 /data/sunrgbd/OFFICIAL_SUNRGBD/
 *.obj
