--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,18 +41,22 @@ jobs:
         torch: [1.5.0+cu101, 1.6.0+cu101, 1.7.0+cu101, 1.8.0+cu101]
         include:
           - torch: 1.5.0+cu101
+            torch_version: torch1.5.0
             torchvision: 0.6.0+cu101
             mmcv: 1.5.0+cu101
             cuda_arch: "7.0"
           - torch: 1.6.0+cu101
+            torch_version: torch1.6.0
             mmcv: 1.6.0+cu101
             torchvision: 0.7.0+cu101
             cuda_arch: "7.0"
           - torch: 1.7.0+cu101
+            torch_version: torch1.7.0
             mmcv: 1.7.0+cu101
             torchvision: 0.8.1+cu101
             cuda_arch: "7.0"
           - torch: 1.8.0+cu101
+            torch_version: torch1.8.0
             mmcv: 1.8.0+cu101
             torchvision: 0.9.0+cu101
             cuda_arch: "7.0"
@@ -86,7 +90,7 @@ jobs:
         run: pip install numpy==1.19.5 torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv-full==latest+torch${{matrix.mmcv}} -f https://download.openmmlab.com/mmcv/dist/index.html --use-deprecated=legacy-resolver
+          pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu101/${{matrix.torch_version}}/index.html
           pip install -q git+https://github.com/open-mmlab/mmdetection.git
           pip install -r requirements.txt
       - name: Build and install
