--- a/configs/nuimages/metafile.yml
+++ b/configs/nuimages/metafile.yml
@@ -1,5 +1,5 @@
 Collections:
-  - Name: nuImages
+  - Name: Mask R-CNN
     Metadata:
       Training Data: nuImages
       Training Techniques:
@@ -14,7 +14,7 @@ Collections:
 
 Models:
   - Name: mask_rcnn_r50_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_r50_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 7.4
@@ -31,7 +31,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_r50_fpn_1x_nuim/mask_rcnn_r50_fpn_1x_nuim_20201008_195238-e99f5182.pth
 
   - Name: mask_rcnn_r50_fpn_coco-2x_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_r50_fpn_coco-2x_1x_nuim.py
     Metadata:
       Training Memory (GB): 7.4
@@ -48,7 +48,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_r50_fpn_coco-2x_1x_nuim/mask_rcnn_r50_fpn_coco-2x_1x_nuim_20201008_195238-b1742a60.pth
 
   - Name: mask_rcnn_r50_caffe_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_r50_caffe_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 7.0
@@ -65,7 +65,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_r50_caffe_fpn_1x_nuim/
 
   - Name: mask_rcnn_r50_caffe_fpn_coco-3x_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_r50_caffe_fpn_coco-3x_1x_nuim.py
     Metadata:
       Training Memory (GB): 7.0
@@ -82,7 +82,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_r50_caffe_fpn_coco-3x_1x_nuim/mask_rcnn_r50_caffe_fpn_coco-3x_1x_nuim_20201008_195305-661a992e.pth
 
   - Name: mask_rcnn_r50_caffe_fpn_coco-3x_20e_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_r50_caffe_fpn_coco-3x_20e_nuim.py
     Metadata:
       Training Memory (GB): 7.0
@@ -99,7 +99,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_r50_caffe_fpn_coco-3x_20e_nuim/mask_rcnn_r50_caffe_fpn_coco-3x_20e_nuim_20201009_125002-5529442c.pth
 
   - Name: mask_rcnn_r101_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_r101_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 10.9
@@ -116,7 +116,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_r101_fpn_1x_nuim/mask_rcnn_r101_fpn_1x_nuim_20201024_134803-65c7623a.pth
 
   - Name: mask_rcnn_x101_32x4d_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/mask_rcnn_x101_32x4d_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 13.3
@@ -133,7 +133,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/mask_rcnn_x101_32x4d_fpn_1x_nuim/mask_rcnn_x101_32x4d_fpn_1x_nuim_20201024_135741-b699ab37.pth
 
   - Name: cascade_mask_rcnn_r50_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/cascade_mask_rcnn_r50_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 8.9
@@ -150,7 +150,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/cascade_mask_rcnn_r50_fpn_1x_nuim/cascade_mask_rcnn_r50_fpn_1x_nuim_20201008_195342-1147c036.pth
 
   - Name: cascade_mask_rcnn_r50_fpn_coco-20e_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/cascade_mask_rcnn_r50_fpn_coco-20e_1x_nuim.py
     Metadata:
       Training Memory (GB): 8.9
@@ -167,7 +167,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/cascade_mask_rcnn_r50_fpn_coco-20e_1x_nuim/cascade_mask_rcnn_r50_fpn_coco-20e_1x_nuim_20201009_124158-ad0540e3.pth
 
   - Name: cascade_mask_rcnn_r50_fpn_coco-20e_20e_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/cascade_mask_rcnn_r50_fpn_coco-20e_20e_nuim.py
     Metadata:
       Training Memory (GB): 8.9
@@ -184,7 +184,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/cascade_mask_rcnn_r50_fpn_coco-20e_20e_nuim/cascade_mask_rcnn_r50_fpn_coco-20e_20e_nuim_20201009_124951-40963960.pth
 
   - Name: cascade_mask_rcnn_r101_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/cascade_mask_rcnn_r101_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 12.5
@@ -201,7 +201,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/cascade_mask_rcnn_r101_fpn_1x_nuim/cascade_mask_rcnn_r101_fpn_1x_nuim_20201024_134804-45215b1e.pth
 
   - Name: cascade_mask_rcnn_x101_32x4d_fpn_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/cascade_mask_rcnn_x101_32x4d_fpn_1x_nuim.py
     Metadata:
       Training Memory (GB): 14.9
@@ -218,7 +218,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/cascade_mask_rcnn_x101_32x4d_fpn_1x_nuim/cascade_mask_rcnn_x101_32x4d_fpn_1x_nuim_20201024_135753-e0e49778.pth
 
   - Name: htc_r50_fpn_coco-20e_1x_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/htc_r50_fpn_coco-20e_1x_nuim.py
     Metadata:
       Training Memory (GB): 11.6
@@ -235,7 +235,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/htc_r50_fpn_coco-20e_1x_nuim/htc_r50_fpn_coco-20e_1x_nuim_20201010_070203-0b53a65e.pth
 
   - Name: htc_r50_fpn_coco-20e_20e_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/htc_r50_fpn_coco-20e_20e_nuim.py
     Metadata:
       Training Memory (GB): 11.6
@@ -252,7 +252,7 @@ Models:
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/nuimages_semseg/htc_r50_fpn_coco-20e_20e_nuim/htc_r50_fpn_coco-20e_20e_nuim_20201008_211415-d6c60a2c.pth
 
   - Name: htc_x101_64x4d_fpn_dconv_c3-c5_coco-20e_16x1_20e_nuim
-    In Collection: nuImages
+    In Collection: Mask R-CNN
     Config: configs/nuimages/htc_x101_64x4d_fpn_dconv_c3-c5_coco-20e_16x1_20e_nuim.py
     Metadata:
       Training Memory (GB): 13.3
