--- a/configs/3dssd/metafile.yml
+++ b/configs/3dssd/metafile.yml
@@ -7,7 +7,6 @@ Collections:
       Training Resources: 8x V100 GPUs
       Architecture:
         - PointNet++
-        - SSD
     Paper: https://arxiv.org/abs/2002.10187
     README: configs/3dssd/README.md
 
@@ -21,5 +20,5 @@ Models:
       - Task: 3D Object Detection
         Dataset: KITTI
         Metrics:
-          mAP: 78.39(81.00)
+          mAP: 78.39
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/3dssd/3dssd_kitti-3d-car_20210324_122002-07e9a19b.pth
