--- a/configs/centerpoint/metafile.yml
+++ b/configs/centerpoint/metafile.yml
@@ -6,7 +6,7 @@ Collections:
         - AdamW
       Training Resources: 8x V100 GPUs
       Architecture:
-        - Feature Pyramid Network
+        - SECOND
         - Hard Voxelization
     Paper: https://arxiv.org/abs/2006.11275
     README: configs/centerpoint/README.md
