--- a/configs/fp16/metafile.yml
+++ b/configs/fp16/metafile.yml
@@ -1,11 +1,9 @@
 Collections:
   - Name: FP16
     Metadata:
-      Training Data:
-        - KITTI
-        - nuScenes
       Training Techniques:
         - AdamW
+        - Mixed Precision Training
       Training Resources: 8x TITAN Xp
       Architecture:
         - Hard Voxelization
@@ -20,14 +18,12 @@ Models:
     In Collection: FP16
     Config: configs/fp16/hv_second_secfpn_fp16_6x8_80e_kitti-3d-car.py
     Metadata:
-      Training Memory (GB):
-        - FP32: 5.4
-        - FP16: 2.9
+      Training Data: KITTI
+      Training Memory (GB): 2.9
     Results:
       - Task: 3D Object Detection
         Dataset: KITTI
         Metrics:
-          FP32 mAP: 79.07
           FP16 mAP: 78.72
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_second_secfpn_fp16_6x8_80e_kitti-3d-car/hv_second_secfpn_fp16_6x8_80e_kitti-3d-car_20200924_211301-1f5ad833.pth
 
@@ -35,14 +31,12 @@ Models:
     In Collection: FP16
     Config: configs/fp16/hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class.py
     Metadata:
-      Training Memory (GB):
-        - FP32: 5.4
-        - FP16: 2.9
+      Training Data: KITTI
+      Training Memory (GB): 2.9
     Results:
       - Task: 3D Object Detection
         Dataset: KITTI
         Metrics:
-          FP32 mAP: 64.41
           FP16 mAP: 67.4
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class/hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class_20200925_110059-05f67bdf.pth
 
@@ -50,15 +44,12 @@ Models:
     In Collection: FP16
     Config: configs/fp16/hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d.py
     Metadata:
-      Training Memory (GB):
-        - FP32: 16.4
-        - FP16: 8.37
+      Training Data: nuScenes
+      Training Memory (GB): 8.37
     Results:
       - Task: 3D Object Detection
         Dataset: nuScenes
         Metrics:
-          FP32 mAP: 35.17
-          FP32 NDS: 49.7
           FP16 mAP: 35.19
           FP16 NDS: 50.27
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d/hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d_20201020_222626-c3f0483e.pth
@@ -67,15 +58,12 @@ Models:
     In Collection: FP16
     Config: configs/fp16/hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d.py
     Metadata:
-      Training Memory (GB):
-        - FP32: 16.4
-        - FP16: 8.40
+      Training Data: nuScenes
+      Training Memory (GB): 8.40
     Results:
       - Task: 3D Object Detection
         Dataset: nuScenes
         Metrics:
-          FP32 mAP: 40.0
-          FP32 NDS: 53.3
           FP16 mAP: 39.26
           FP16 NDS: 53.26
     Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d/hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d_20201021_120719-269f9dd6.pth
