--- a/configs/ssn/metafile.yml
+++ b/configs/ssn/metafile.yml
@@ -1,9 +1,6 @@
 Collections:
   - Name: SSN
     Metadata:
-      Training Data:
-        - nuScenes
-        - Lyft
       Training Techniques:
         - AdamW
       Training Resources: 8x GeForce GTX 1080 Ti
@@ -18,6 +15,7 @@ Models:
     In Collection: SSN
     Config: configs/ssn/hv_ssn_secfpn_sbn-all_2x16_2x_nus-3d.py
     Metadata:
+      Training Data: nuScenes
       Training Memory (GB): 9.62
     Results:
       - Task: 3D Object Detection
@@ -31,6 +29,7 @@ Models:
     In Collection: SSN
     Config: configs/ssn/hv_ssn_regnet-400mf_secfpn_sbn-all_2x16_2x_nus-3d.py
     Metadata:
+      Training Data: nuScenes
       Training Memory (GB): 10.26
     Results:
       - Task: 3D Object Detection
@@ -44,6 +43,7 @@ Models:
     In Collection: SSN
     Config: configs/ssn/hv_ssn_secfpn_sbn-all_2x16_2x_lyft-3d.py
     Metadata:
+      Training Data: Lyft
       Training Memory (GB): 8.30
     Results:
       - Task: 3D Object Detection
@@ -57,6 +57,7 @@ Models:
     In Collection: SSN
     Config: configs/ssn/hv_ssn_regnet-400mf_secfpn_sbn-all_1x16_2x_lyft-3d.py
     Metadata:
+      Training Data: Lyft
       Training Memory (GB): 9.98
     Results:
       - Task: 3D Object Detection
