--- a/configs/votenet/metafile.yml
+++ b/configs/votenet/metafile.yml
@@ -1,9 +1,6 @@
 Collections:
   - Name: VoteNet
     Metadata:
-      Training Data:
-        - SUNRGBD
-        - ScanNet
       Training Techniques:
         - AdamW
       Training Resources: 8x V100 GPUs
@@ -17,6 +14,7 @@ Models:
     In Collection: VoteNet
     Config: configs/votenet/votenet_16x8_sunrgbd-3d-10class.py
     Metadata:
+      Training Data: SUNRGBD
       Training Memory (GB): 8.1
     Results:
       - Task: 3D Object Detection
@@ -30,6 +28,7 @@ Models:
     In Collection: VoteNet
     Config: configs/votenet/votenet_8x8_scannet-3d-18class.py
     Metadata:
+      Training Data: ScanNet
       Training Memory (GB): 4.1
     Results:
       - Task: 3D Object Detection
@@ -43,6 +42,7 @@ Models:
     In Collection: VoteNet
     Config: configs/votenet/votenet_iouloss_8x8_scannet-3d-18class.py
     Metadata:
+      Training Data: ScanNet
       Training Memory (GB): 4.1
       Architecture:
         - IoU Loss
