[Fix] Fix bug in the installation of `mmsegmentation` in Dockerfile  (#565)
* pip install mmsegmentation

Change from mmseg to mmsegmentation.

* Update Dockerfile

Co-authored-by: Yezhen Cong <52420115+THU17cyz@users.noreply.github.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y ffmpeg libsm6 libxext6 git ninja-build 
 # Install MMCV, MMDetection and MMSegmentation
 RUN pip install mmcv-full==latest+torch1.6.0+cu101 -f https://openmmlab.oss-accelerate.aliyuncs.com/mmcv/dist/index.html
 RUN pip install mmdet==2.11.0
-RUN pip install mmseg
+RUN pip install mmsegmentation==0.13.0
 
 # Install MMDetection3D
 RUN conda clean --all
