Coord sys refactor (main code)

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ data/sunrgbd/OFFICIAL_SUNRGBD/
 
 # Waymo evaluation
 mmdet3d/core/evaluation/waymo_utils/compute_detection_metrics_main
+pointpillars_nuscenes_results/
