--- a/configs/dgcnn/metafile.yml
+++ b/configs/dgcnn/metafile.yml
@@ -21,4 +21,4 @@ Models:
         Dataset: S3DIS
         Metrics:
           mIoU: 59.43
-    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/dgcnn/dgcnn_32x4_cosine_100e_s3dis_seg-3d-13class/dgcnn_32x4_cosine_100e_s3dis_seg-3d-13class_20210514_143628-4e341a48.pth
+    Weights: https://download.openmmlab.com/mmdetection3d/v0.17.0_models/dgcnn/dgcnn_32x4_cosine_100e_s3dis_seg-3d-13class
